--- a/index.html
+++ b/index.html
@@ -54,22 +54,16 @@
 
             <div class="container feature-flower-container text-center">
 
-                <div class="feature-flower-box">
-                    <div class="feature-flower" id="feature-flower-1">
-                        <img src="./images/pngwing 6.png" alt="">
-                    </div>
+                <div id="feature-flower-1" class="feature-flower-box">
+                    <img src="./images/pngwing 6.png" alt="">
                     <h4 class="primary-title-color secondary-title">Pink Flower Tree</h4>
                 </div>
-                <div class="feature-flower-box">
-                    <div class="feature-flower" id="feature-flower-2">
-                        <img src="./images/pngwing 5.png" alt="">
-                    </div>
+                <div id="feature-flower-2" class="feature-flower-box">
+                    <img src="./images/pngwing 5.png" alt="">
                     <h4 class="primary-title-color secondary-title">Merge Flower Tree</h4>
                 </div>
-                <div class="feature-flower-box">
-                    <div class="feature-flower" id="feature-flower-3">
-                        <img src="./images/pngwing 7.png" alt="">
-                    </div>
+                <div id="feature-flower-3" class="feature-flower-box">
+                    <img src="./images/pngwing 7.png" alt="">
                     <h4 class="primary-title-color secondary-title">Yellow Flower Tree</h4>
                 </div>
 
@@ -126,11 +120,19 @@
                     distracted by the readable content of a page when looking at its layout.</p>
             </div>
 
-            <div class="instagram-flower container">
-                <img src="./images/Flower 01.png" alt="">
-                <img src="./images/Rectangle 4.png" alt="">
-                <img src="./images/Rectangle 5.png" alt="">
-                <img src="./images/Rectangle 6.png" alt="">
+            <div class="instagram-flower-box container">
+                <div class="instagram-flower">
+                    <img src="./images/Flower 01.png" alt="">
+                </div>
+                <div class="instagram-flower">
+                    <img src="./images/Rectangle 4.png" alt="">
+                </div>
+                <div class="instagram-flower">
+                    <img src="./images/Rectangle 5.png" alt="">
+                </div>
+                <div class="instagram-flower">
+                    <img src="./images/Rectangle 6.png" alt="">
+                </div>
             </div>
         </section>
 
@@ -197,12 +199,11 @@
     <footer class="section-area-distance footer-area">
         <div class="main-container text-center">
             <h3 class="primary-title">
-                <span class="secondary-title-color">Flower</span>
-                <span class="secondary-text-color">Shop</span>
+                <span class="secondary-title-color">Flower</span><span class="secondary-text-color">Shop</span>
             </h3>
             <p class="primary-text-size secondary-text-color">It is a long established fact that a reader will be
                 distracted by the readable <br> content of a page when looking at its layout.</p>
-            <small class="primary-text-color">@2023-FlowerShop.com. &copy; All rights reserved. </small>
+            <small class="copy-right">@2023-FlowerShop.com. &copy; All rights reserved. </small>
         </div>
 
     </footer>
