--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flowerful world </title>
+    <title>flower shop </title>
     <!-- fav-icon -->
     <link rel="shortcut icon" href="./images/fav-icon.png" type="image/x-icon">
     <!-- css -->
@@ -20,7 +20,7 @@
 
     <header class="header-area">
 
-        <div class="main-container container">
+        <div class="main-container  header-box">
 
             <div class="header-content">
                 <h2 class="primary-title-color margin-none">Let's make <br> beautiful flowers a <br> part of your life.
@@ -34,7 +34,7 @@
             </div>
 
             <div class="header-img">
-                <img class="img-width" src="./images/pngwing 10.png" alt="" draggable="false">
+                <img src="./images/pngwing 10.png" alt="" draggable="false">
             </div>
 
         </div>
